Fix bug where debug files were generated in the incorrect directory